--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,16 @@
 platform = espressif32
 board = heltec_wifi_lora_32_V3
 framework = arduino
+monitor_speed = 115200
+lib_ldf_mode = deep+
+build_flags = -std=c++11
 lib_deps = 
 	RadioLib
 	ropg/Heltec_ESP32_LoRa_v3@^0.9.2
 	knolleary/PubSubClient@^2.8
+	throwtheswitch/Unity@^2.6.0
+
+[test_env:tests]
+platform = espressif32
+board = heltec_wifi_lora_32_V3
+framework = arduino
